--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="user">
-                    <img src="../static/assets/images/saabu.jpg">
+                    <img src="../static/assets/images/saabu.png">
                 </div>
             </div>
             <br>
