--- a/templates/recommendfirst.html
+++ b/templates/recommendfirst.html
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="user">
-                    <img src="../static/assets/images/saabu.jpg">
+                    <img src="../static/assets/images/saabu.png">
                 </div>
             </div>
             <br>
@@ -122,7 +122,8 @@
             <!-- Add a form inside the container -->
             <form class="content-container" style="overflow: auto; max-height: 500px;" method="POST" action="/recommend_First">
             
-                <label for="reason">Write in brief why you want a doctor's Appointment:</label>
+                <label for="reason">Just mention the disease you are suffering from(eg:Astma,Depression
+                ) to book appointment:</label>
                 <textarea id="patient_condition" name="patient_condition" rows="5" required></textarea>
 
                 <label for="medical-history">Medical history (including any allergies, medications, and chronic conditions):</label>
