--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="user">
-                    <img src="../static/assets/images/saabu.jpg" alt="">
+                    <img src="../static/assets/images/saabu.png" alt="">
                 </div>
             </div>
 
